fix image overflow in Angebot box

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2038,26 +2038,29 @@ input, select, textarea {
 /* Box */
 
 	.box {
-		border: solid 2px;
-		margin-bottom: 2rem;
-		padding: 1.5rem;
+	    border: solid 2px;
+	    margin-bottom: 2rem;
+	    padding: 2rem;
+	    border-color: #eeeeee;
 	}
 
-		.box > :last-child,
-		.box > :last-child > :last-child,
-		.box > :last-child > :last-child > :last-child {
-			margin-bottom: 0;
-		}
-
-		.box.alt {
-			border: 0;
-			border-radius: 0;
-			padding: 0;
-		}
-
-	.box {
-		border-color: #eeeeee;
+	.box > :last-child,
+	.box > :last-child > :last-child,
+	.box > :last-child > :last-child > :last-child {
+	    margin-bottom: 0;
 	}
+
+	.box.alt {
+	    border: 0;
+	    border-radius: 0;
+	    padding: 0;
+	}
+
+	.box .image.left img {
+	    max-width: 100%;
+	    height: auto;
+	}
+
 
 /* Button */
 
